#73 | Fix contrast color from cookies and list elements at offering

--- a/assets/_scss/common/button.scss
+++ b/assets/_scss/common/button.scss
@@ -15,7 +15,7 @@
 }
 
 .btn-base {
-  color: var(--button-text-color);
+  color: black;
   background-color: var(--button-background-color);
   border-color: var(--button-border-color);
 }
