--- a/assets/_scss/default/cookie-consent.scss
+++ b/assets/_scss/default/cookie-consent.scss
@@ -21,6 +21,9 @@
   display: none;
   transition: all 0.4s ease;
   margin-left: var(--consent-bar-left-right-margin);
+  a {
+    font-weight: 600;
+  }
 }
 
 .consent-bar > .close-button {
